# guild-network

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  README.md  baseline.py  customSpec.json  customSpecRaw.json  integr_test.py  patch  rust-toolchain.toml  start.sh  stats.py  stress.sh
.github/: .dive-ci
benchmark-utils/: Cargo.toml
benchmark-utils/src/: lib.rs  main.rs
docs/: chain-spec.md  interaction.md  runtime-upgrades.md  validator.md
gn-api/: Cargo.toml
gn-api/artifacts/: metadata.scale
gn-api/examples/guild/: common.rs  eth.rs  join.rs  main.rs  token.rs
gn-api/examples/guild/oracle/: mock.rs  mod.rs
gn-api/src/: cast.rs  lib.rs
gn-api/src/query/: functions.rs  guild.rs  identity.rs  mod.rs  oracle.rs
gn-api/src/tx/: mod.rs  payload.rs  send.rs  status.rs
gn-api/src/tx/payload/: guild.rs  identity.rs  mod.rs
gn-cli/: Cargo.toml
gn-cli/src/: evm.rs  guild.rs  key.rs  main.rs  oracle.rs  stress.rs  sudo.rs  transfer.rs
gn-client/: Cargo.toml
gn-client/artifacts/: metadata.scale
gn-client/examples/guild/: common.rs  fund.rs  join.rs  key.rs  keys.rs  main.rs  register.rs  sign.rs  sudo.rs  token.rs
gn-client/examples/join_guild/: common.rs  main.rs
gn-client/src/: cast.rs  data.rs  lib.rs  queries.rs  query.rs  transactions.rs
gn-client/src/query/: functions.rs  mod.rs
gn-client/src/transactions/: mod.rs  status.rs
gn-client/src/tx/: mod.rs  payload.rs  send.rs  status.rs
gn-common/: Cargo.toml
gn-common/src/: filter.rs  hash.rs  identity.rs  lib.rs  merkle.rs  pad.rs  utils.rs
gn-common/src/identities/: impls.rs  mod.rs
gn-common/src/identity/: auth.rs  mod.rs
gn-common/src/requirements/: allowlist.rs  chains.rs  mod.rs
gn-common/src/requirements/check/: evm.rs  mod.rs
gn-dummy/: Cargo.toml
gn-engine/: Cargo.toml
gn-engine/src/: balance.rs  lib.rs
gn-engine/src/check/: evm.rs  mod.rs
gn-frontend/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  esbuild.js  fix_bundle.js  index.html  index.scss  package-lock.json  package.json
gn-frontend/src/: app.rs  guild_page.rs  main.rs  not_found.rs  use_ens_account.rs
gn-frontend/ts/: app.ts  web3Setup.ts
gn-gate/: Cargo.toml
gn-gate/src/: data.rs  lib.rs
gn-gate/src/identities/: impls.rs  mod.rs
gn-gate/src/requirements/: balance.rs  chains.rs
gn-gate/src/requirements/check/: evm.rs
gn-node/: Cargo.toml
gn-node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_benchmark.rs  main.rs  rpc.rs  service.rs
gn-oracle/: Cargo.toml
gn-oracle/src/: main.rs  token.rs
gn-pallets/pallet-chainlink/: Cargo.toml
gn-pallets/pallet-chainlink/src/: lib.rs
gn-pallets/pallet-guild/: Cargo.toml
gn-pallets/pallet-guild-identity/: Cargo.toml
gn-pallets/pallet-guild-identity/src/: benchmark.rs  lib.rs  mock.rs  test.rs  weights.rs
gn-pallets/pallet-guild-identity/src/test/: address.rs  authorize.rs  identity.rs  mod.rs  register.rs
gn-pallets/pallet-guild/src/: benchmark.rs  benchmarking.rs  lib.rs  mock.rs  test.rs  weights.rs
gn-pallets/pallet-guild/src/test/: guild_and_role.rs  helpers.rs  join_and_leave.rs  mod.rs  register.rs  role.rs
gn-pallets/pallet-im-online/: Cargo.toml
gn-pallets/pallet-im-online/src/: lib.rs
gn-pallets/pallet-oracle/: Cargo.toml
gn-pallets/pallet-oracle/src/: benchmark.rs  benchmarking.rs  lib.rs  mock.rs  weights.rs
gn-pallets/pallet-oracle/src/test/: helpers.rs  initiate.rs  mod.rs  register.rs
gn-pallets/pallet-test-caller/: Cargo.toml
gn-pallets/pallet-test-caller/src/: lib.rs  test.rs
gn-pallets/pallet-validator-manager/: Cargo.toml
gn-pallets/pallet-validator-manager/src/: lib.rs  migration.rs  mock.rs  test.rs
gn-requirement/: Cargo.toml
gn-requirement/src/: filter.rs  lib.rs
gn-requirement/src/check/: evm.rs  mod.rs
gn-runtime/: Cargo.toml
gn-runtime/src/: lib.rs
gn-sig/: Cargo.toml
gn-sig/src/: eth.rs  lib.rs  multisignature.rs  multisigner.rs  webcrypto.rs
gn-sig/src/webcrypto/: mod.rs  wallet.rs
gn-test-data/: Cargo.toml
gn-test-runtime/: Cargo.toml
gn-wasm/: Cargo.toml  readme.md
gn-wasm/src/: lib.rs  signer.rs
gn-wasm/src/transactions/: create_guild.rs  join_guild.rs  manage_role.rs  mod.rs  register.rs
guild-network-client/: Cargo.toml
guild-network-client/artifacts/: metadata.scale
guild-network-client/examples/: cli.rs  join_guild.rs  join_guild_oracle.rs  register_operators.rs
guild-network-client/examples/join_guild/: common.rs  main.rs
guild-network-client/src/: data.rs  lib.rs  queries.rs  transactions.rs
guild-network-client/src/transactions/: mod.rs
guild-network-common/: Cargo.toml
guild-network-common/src/: identities.rs  lib.rs  utils.rs
guild-network-common/src/identities/: map.rs  mod.rs
guild-network-common/src/requirements/: balance.rs  mod.rs
guild-network-common/src/requirements/check/: evm.rs
guild-network-gate/: .gitignore  Cargo.toml  README.md
guild-network-gate/.github/workflows/: general.yaml
guild-network-gate/src/: lib.rs
guild-network-gate/src/identities/: impls.rs  map.rs  mod.rs  verify.rs
guild-network-gate/src/requirements/: allowlist.rs  balance.rs  mod.rs
guild-network-gate/src/requirements/check/: evm.rs  mod.rs
guild-network-node/: Cargo.toml
guild-network-oracle/: Cargo.toml  README.md
guild-network-oracle/artifacts/: metadata.scale
guild-network-oracle/benches/: extrinsic.rs
guild-network-oracle/src/: lib.rs  main.rs
guild-network-pallets/pallet-chainlink/: Cargo.toml
guild-network-pallets/pallet-chainlink/src/: lib.rs
guild-network-pallets/pallet-guild/: Cargo.toml
guild-network-pallets/pallet-guild/src/: benchmarking.rs  lib.rs  test.rs
guild-network-pallets/pallet-test-caller/: Cargo.toml
guild-network-pallets/pallet-test-caller/src/: lib.rs  test.rs
guild-network-runtime/: Cargo.toml
guild-network-wasm/: Cargo.toml
guild-network-wasm/src/: lib.rs
guild-network-wasm/wasm/: guild_network_wasm.d.ts  guild_network_wasm.js  guild_network_wasm_bg.wasm  guild_network_wasm_bg.wasm.d.ts
node/: Cargo.toml
(+74 files in other folders)
