[workspace]
exclude = ["rusty-gate"]
members = [
    "gn-client",
    "gn-common",
    "gn-node",
    "gn-oracle",
    "gn-pallets/pallet-oracle",
    "gn-pallets/pallet-guild",
    "gn-runtime",
    "gn-test-data",
    "gn-wasm",
]
# don't include wasm in the build process
default-members = [
    "gn-client",
    "gn-common",
    "gn-node",
    "gn-oracle",
    "gn-pallets/pallet-oracle",
    "gn-pallets/pallet-guild",
    "gn-runtime",
    "gn-test-data",
]

[profile.release]
panic = "abort"

[workspace.dependencies]
# general
parity-scale-codec = { version = "3.2.2", default-features = false }
scale-info = { version = "2.1.1", default-features = false }

# substrate frame
frame-benchmarking = { version = "15.0.0", default-features = false }
frame-benchmarking-cli = { version = "19.0.0", default-features = false }
frame-executive = { version = "15.0.0", default-features = false }
frame-support = { version = "15.0.0", default-features = false }
frame-system = { version = "15.0.0", default-features = false }
frame-system-benchmarking = { version = "15.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "13.0.0", default-features = false }
frame-try-runtime = { version = "0.21.0", default-features = false }
substrate-frame-rpc-system = { version = "15.0.0", default-features = false }

# substrate pallets
pallet-aura = { version = "14.0.0", default-features = false }
pallet-balances = { version = "15.0.0", default-features = false }
pallet-grandpa = { version = "15.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "15.0.0", default-features = false }
pallet-sudo = { version = "15.0.0", default-features = false }
pallet-timestamp = { version = "14.0.0", default-features = false }
pallet-transaction-payment = { version = "15.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "17.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "15.0.0", default-features = false }

# substrate core
sc-basic-authorship = { version = "0.21.0" }
sc-cli = { version = "0.23.0" }
sc-client-api = { version = "15.0.0" }
sc-consensus = { version = "0.20.0" }
sc-consensus-aura = { version = "0.21.0" }
sc-executor = { version = "0.19.0" }
sc-finality-grandpa = { version = "0.21.0" }
sc-keystore = { version = "12.0.0" }
sc-rpc-api = { version = "0.20.0" }
sc-service = { version = "0.22.0" }
sc-telemetry = { version = "6.0.0" }
sc-transaction-pool = { version = "15.0.0" }
sc-transaction-pool-api = { version = "15.0.0" }

# substrate primitives
sp-api = { version = "13.0.0", default-features = false }
sp-block-builder = { version = "13.0.0", default-features = false }
sp-blockchain = { version = "15.0.0", default-features = false }
sp-consensus = { version = "0.19.0", default-features = false }
sp-consensus-aura = { version = "0.19.0", default-features = false }
sp-core = { version = "15.0.0", default-features = false }
sp-finality-grandpa = { version = "13.0.0", default-features = false }
sp-inherents = { version = "13.0.0", default-features = false }
sp-io = { version = "16.0.0", default-features = false }
sp-keyring = { version = "17.0.0", default-features = false }
sp-offchain = { version = "13.0.0", default-features = false }
sp-runtime = { version = "17.0.0", default-features = false }
sp-session = { version = "14.0.0", default-features = false }
sp-std = { version = "6.0.0", default-features = false }
sp-timestamp = { version = "13.0.0", default-features = false }
sp-transaction-pool = { version = "13.0.0", default-features = false }
sp-version = { version = "15.0.0", default-features = false }
