[package]
name = "gn-api"
version = "0.0.0-alpha"
edition = "2021"

[features]
default = [
    "gn-common/default",
    "guild-requirements/default",
    "subxt/default",
    "tx",
]
external-oracle = []
prefund = []
tx = [
    "sp-core",
    "gn-sig",
]
wasm = ["subxt/jsonrpsee-web"]

[dependencies]
# local
gn-common = { version = "0.0.0-alpha", path = "../gn-common", default-features = false }
gn-sig = { version = "0.0.0-alpha", path = "../gn-sig", features = ["wallet"], optional = true }
#guild-requirements = { git = "https://github.com/agoraxyz/guild-rs", branch = "oracle-integration", default-features = false }
guild-requirements = { path = "../../guild-rs/requirements", default-features = false }
subxt = { git = "https://github.com/agoraxyz/subxt", branch = "bumped-wasm", default-features = false }

# general
futures = "0.3.25"
log = { version = "0.4.17", default-features = false }
parity-scale-codec = { workspace = true } # required for the runtime subxt macro
paste = { version = "1.0", default-features = false }

# substrate primitives
sp-core = { workspace = true, optional = true }

[dev-dependencies]
# local
gn-test-data = { path = "../gn-test-data" }

# general
ethers = "1.0.2"
hex = "0.4.3"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "time"] }
