[package]
name = "gn-cli"
version = "0.0.0-alpha"
edition = "2021"

[features]
default = ["verify"]
verify = []

[dependencies]
env_logger = "0.9.0"
futures = "0.3.25"
gn-client = { version = "0.0.0-alpha", path = "../gn-client" }
gn-common = { version = "0.0.0-alpha", path = "../gn-common" }
hex = "0.4.3"
log = "0.4.17"
parity-scale-codec = { workspace = true }
requiem = { git = "https://github.com/agoraxyz/requiem" }
structopt = "0.3.26"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
