[package]
name = "gn-client"
version = "0.0.0-alpha"
edition = "2021"

[features]
default = ["subxt/default", "tx"]
external-oracle = []
tx = ["sp-core"]
wasm = ["subxt/jsonrpsee-web"]

[dependencies]
# local
gn-common = { version = "0.0.0-alpha", path = "../gn-common" }
subxt = { git = "https://github.com/agoraxyz/subxt", branch = "bumped-wasm", default-features = false }

# general
futures = "0.3.25"
log = { version = "0.4.17", default-features = false }
parity-scale-codec = { workspace = true } # required for the runtime subxt macro
serde = { version = "1.0.144", features = ["derive"] }
serde_cbor = "0.11.2"

# substrate core
sp-core = { workspace = true, optional = true }

[dev-dependencies]
# local
gn-test-data = { path = "../gn-test-data" }

# general
ethers = "1.0.2"
hex = "0.4.3"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
serde_json = "1"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

# substrate primitives
sp-keyring = { workspace = true }
