[package]
name = "gn-client"
version = "0.0.0-alpha"
edition = "2021"

[features]
default = [
    "gn-common/default",
    "gn-engine/default",
    "subxt/default",
    "tx",
]
external-oracle = []
prefund = []
tx = [
    "sp-core",
    "gn-engine/check"
]
wasm = ["subxt/jsonrpsee-web"]

[dependencies]
# local
gn-common = { version = "0.0.0-alpha", path = "../gn-common", default-features = false }
gn-engine = { version = "0.0.0-alpha", path = "../gn-engine", default-features = false }
subxt = { git = "https://github.com/agoraxyz/subxt", branch = "bumped-wasm", default-features = false }

# general
futures = "0.3.25"
log = { version = "0.4.17", default-features = false }
parity-scale-codec = { workspace = true } # required for the runtime subxt macro
paste = { version = "1.0", default-features = false }
serde = { version = "1.0.144", features = ["derive"] }

# substrate primitives
sp-core = { workspace = true, optional = true }

[dev-dependencies]
# local
gn-test-data = { path = "../gn-test-data" }

# general
ethers = "1.0.2"
hex = "0.4.3"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
serde_json = "1"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "time"] }
