[package]
name = "gn-common"
version = "0.0.0-alpha"
edition = "2021"

[features]
default = ["std"]
std = [
    "binary-merkle-tree/std",
    "ed25519-zebra/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "schnorrkel/std",
    "sha3/std",
]

[dependencies]
binary-merkle-tree = { version = "4.0.0", default-features = false }
ed25519-zebra = { version  = "3.1.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
schnorrkel = { version = "0.9.1", default-features = false, features = ["u64_backend"] }
secp256k1 = { version = "0.26.0", default-features = false, features = ["alloc", "recovery"] }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11.9", default-features = false, features = ["alloc"] }
sha3 = { version = "0.10.6", default-features = false }

[dev-dependencies]
# general
ethers = "1.0.2"
serde_json = "1"
serde_test = "1"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

# substrate primitives
sp-core = { workspace = true, features = ["std"] }
