[package]
name = "gn-engine"
version = "0.0.0-alpha"
edition = "2021"

[features]
check = [
    "anyhow",
    "providers",
    "std", 
]
default = ["std"]
std = [
    "gn-common/std",
    "parity-scale-codec/std",
]

[dependencies]
# local
gn-common = { path = "../gn-common", default-features = false }
providers = { git = "https://github.com/agoraxyz/rusty-gate", branch = "main", optional = true }

# general
anyhow = { version = "1", default-features = false, optional = true }
parity-scale-codec = { workspace = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_cbor = "0.11.2"

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
