[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
js-sys = "0.3.60"
gloo = "0.8.0"
wasm-bindgen-futures = "0.4.33"
gn-wasm = { path = "../gn-wasm" }
gloo-console = "0.2.3"
yew-router = "0.17"
