[package]
build = "build.rs"
edition = "2021"
name = "gn-node"
publish = false
version = "0.0.0-alpha"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
runtime-benchmarks = [
  "frame-benchmarking/default",
  "frame-benchmarking-cli/default",
  "frame-system",
  "gn-runtime/runtime-benchmarks",
  "pallet-transaction-payment",
  "sc-service/runtime-benchmarks",
  "sp-inherents",
  "sp-keyring",
]
try-runtime = [
  "gn-runtime/try-runtime",
  "sp-io",
  "try-runtime-cli/try-runtime"
]

[dependencies]
# local
gn-runtime = { path = "../gn-runtime" }

# general
clap = {version = "4.0.9", features = ["derive"]}
futures = { version = "0.3.21", features = ["thread-pool"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }

# substrate frame
frame-benchmarking = { workspace = true, optional = true }
frame-benchmarking-cli = { workspace = true, optional = true }
frame-system = { workspace = true, optional = true }
substrate-frame-rpc-system = { workspace = true }

# substrate pallets
pallet-transaction-payment = { workspace = true, optional = true }
pallet-transaction-payment-rpc = { workspace = true }

# substrate core
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-executor = { workspace = true }
sc-finality-grandpa = { workspace = true }
sc-keystore = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }

# substrate primitives
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-finality-grandpa = { workspace = true }
sp-inherents = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
sp-keyring = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }

try-runtime-cli = { version = "0.25.0", optional = true }

[build-dependencies]
substrate-build-script-utils = "4.0.0"
