[package]
name = "gn-oracle"
version = "0.0.0-alpha"
edition = "2021"

[dependencies]
# local
gn-client = { version = "0.0.0-alpha", path = "../gn-client" }
gn-common = { version = "0.0.0-alpha", path = "../gn-common" }
requiem = { git = "https://github.com/agoraxyz/requiem" }

# general
env_logger = "0.9.0"
futures = "0.3.25"
log = { version = "0.4.17", default-features = false }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

# substrate primitives
sp-keyring = { workspace = true }
